--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,9 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
+  ],
+  "include": [
+    "src",
+    "src/setupTests.d.ts"
   ]
 }
